# XenoDAQ

./: .git_ignore  .gitignore  LICENSE  README.md
DAQ/API/html/: _a_d_c_manager1720_8cpp.xhtml  _a_d_c_manager1720_8cpp__incl.map  _a_d_c_manager1720_8cpp__incl.md5  _a_d_c_manager1720_8h.xhtml  _a_d_c_manager1720_8h__dep__incl.map  _a_d_c_manager1720_8h__dep__incl.md5  _a_d_c_manager1720_8h__incl.map  _a_d_c_manager1720_8h__incl.md5  _a_d_c_manager1720_8h_source.xhtml  _a_d_c_manager1724_8cpp.xhtml  _a_d_c_manager1724_8cpp__incl.map  _a_d_c_manager1724_8cpp__incl.md5  _a_d_c_manager1724_8h.xhtml  _a_d_c_manager1724_8h__dep__incl.map  _a_d_c_manager1724_8h__dep__incl.md5  _a_d_c_manager1724_8h__incl.map  _a_d_c_manager1724_8h__incl.md5  _a_d_c_manager1724_8h_source.xhtml  _a_d_c_manager1730_8cpp.xhtml  _a_d_c_manager1730_8cpp__incl.map  _a_d_c_manager1730_8cpp__incl.md5  _a_d_c_manager1730_8h.xhtml  _a_d_c_manager1730_8h__dep__incl.map  _a_d_c_manager1730_8h__dep__incl.md5  _a_d_c_manager1730_8h__incl.map  _a_d_c_manager1730_8h__incl.md5  _a_d_c_manager1730_8h_source.xhtml  _a_d_c_manager_8cpp.xhtml  _a_d_c_manager_8cpp__incl.map  _a_d_c_manager_8cpp__incl.md5  _a_d_c_manager_8h.js  _a_d_c_manager_8h.xhtml  _a_d_c_manager_8h__dep__incl.map  _a_d_c_manager_8h__dep__incl.md5  _a_d_c_manager_8h__incl.map  _a_d_c_manager_8h__incl.md5  _a_d_c_manager_8h_source.xhtml  _c_d_a_q_2_core_2_include_2_v_m_e_manager_8h.xhtml  _c_d_a_q_2_core_2_include_2_v_m_e_manager_8h__incl.map  _c_d_a_q_2_core_2_include_2_v_m_e_manager_8h__incl.md5  (+2159 more)
DAQ/API/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  defines_0.js  defines_1.js  defines_10.js  (+90 more)
DAQ/CDAQ/: CMakeLists.txt
DAQ/CDAQ/Application/: CMakeLists.txt  DC_Measurement.cpp  DC_Measurement.cpp~  MultiDAQ.cpp  MultiDAQ.cpp~  SingleDAQ.cpp  SingleDAQ.cpp~
DAQ/CDAQ/Core/: CMakeLists.txt
DAQ/CDAQ/Core/Include/: ADCManager.h  ADCManager.h~  ADCManager1720.h  ADCManager1720.h~  ADCManager1724.h  ADCManager1724.h~  ADCManager1730.h  ADCManager1730.h~  DCManager.h  ScopeManager.h  ScopeManager.h~  SlowcontrolManager.h  SlowcontrolManager.h~  StorageManager.h  StorageManager.h~  VMEManager.h  disable_board0.sh
DAQ/CDAQ/Core/Source/: ADCManager.cpp  ADCManager.cpp~  ADCManager1720.cpp  ADCManager1720.cpp~  ADCManager1724.cpp  ADCManager1724.cpp~  ADCManager1730.cpp  ADCManager1730.cpp~  DCManager.cpp  ScopeManager.cpp  ScopeManager.cpp~  SlowcontrolManager.cpp  SlowcontrolManager.cpp~  StorageManager.cpp  StorageManager.cpp~  VMEManager.cpp
DAQ/CDAQ/Macro/Baseline/: Module_0_DACBaseline.ini  Module_1_DACBaseline.ini
DAQ/CDAQ/Plugins/: CMakeLists.txt
DAQ/CDAQ/Plugins/Include/: common.h  common.h~  global.h  global.h~  keyb.h  xmlParser.h
DAQ/CDAQ/Plugins/Source/: common.cpp  keyb.cpp  xmlParser.cpp
DAQ/PDAQ/: CMakeLists.txt
DAQ/PDAQ/Application/: CMakeLists.txt  ZDAQ.cpp  test.cpp
DAQ/PDAQ/Core/: CMakeLists.txt
DAQ/PDAQ/Core/Include/: DAQContainer.h  keyb.h  xml.h
DAQ/PDAQ/Core/Source/: DAQContainer.cpp  DRS.cpp  keyb.cpp  xml.cpp
DAQ/PDAQ/Macro/: Findlibusb-1.0.cmake
DAQ/Scaler/: CMakeLists.txt
DAQ/Scaler/Application/: CMakeLists.txt  scaler.cpp
DAQ/Scaler/Core/: CMakeLists.txt
DAQ/Scaler/Core/Include/: ScalerManager.h  xml.h
DAQ/Scaler/Core/Source/: DiscriminatorManager.cpp  ScalerManager.cpp  VMEManager.cpp  xml.cpp
DAQ/Scaler/IO/Include/: IOManager.h
DAQ/Scaler/IO/Source/: IOManager.cpp
DAQ/Scaler/Plugins/: CMakeLists.txt
DAQ/Scripts/HV/: hv.py
DAQ/Scripts/HV/N1470/: HVBoard_C  HVBoard_C.C  HVBoard_C.cpp  Makefile  configuration.cfg  rs232.c
DAQ/Scripts/Pulser/: daq.sh  pulser.py  pulser_off.py  pulser_on_PMT.py  pulser_on_PMT_AP.py  pulser_on_PMT_Gain.py  pulser_on_SiPM.py
DAQ/TDC/: CMakeLists.txt
DAQ/TDC/Application/: CMakeLists.txt
DAQ/TDC/Core/: CMakeLists.txt
DAQ/TDC/Core/Include/: TDCManager.h  xml.h
DAQ/TDC/Core/Source/: DiscriminatorManager.cpp  TDCManager.cpp  xml.cpp
DAQ/TDC/Plugins/Include/: global.h
DAQ/TDC/Plugins/Source/: common.cpp
DAQ/V1290/Application/: tdc.cpp
DAQ/V1290/Core/Include/: DiscriminatorManager.h  VMEManager.h
DAQ/V1290/Core/Source/: TDCManager.cpp
DAQ/V1290/IO/: CMakeLists.txt
DAQ/V1290/IO/Include/: IOManager.h
DAQ/V1290/IO/Source/: IOManager.cpp
DAQ/V1290/Plugins/: CMakeLists.txt
DAQ/V1290/Plugins/Include/: common.h
DAQ/XDAQ/: CMakeLists.txt
DAQ/XDAQ/Application/: CMakeLists.txt  miniDAX.cpp
DAQ/XDAQ/Core/: CMakeLists.txt
DAQ/XDAQ/Core/Include/: control.h  xml.h
DAQ/XDAQ/Core/Source/: adc.cpp  control.cpp  xml.cpp
DAQ/XDAQ/GUI/: CMakeLists.txt
DAQ/XDAQ/GUI/Include/: adc.h  control.h  global.h  xml.h
DAQ/XDAQ/GUI/Source/: graph.cpp
DAQ/XDAQ/Plugins/: CMakeLists.txt
DAQ/XDAQ/Plugins/Include/: common.h
DAQ/XScaler/: CMakeLists.txt
DAQ/XScaler/Application/: .main.cc.swm  .main.cc.swn  .main.cc.swo  .main.cc.swp  CMakeLists.txt  main.cc
DAQ/XScaler/Core/: CMakeLists.txt
DAQ/XScaler/Core/Include/: scaler.hh
DAQ/XScaler/Core/Source/: scaler.cc
DAQ/XScaler/Plugins/: CMakeLists.txt
DAQ/XScaler/data/: Test.root
